[project]
name = "vocaloid-database-dump"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mkpoli", email = "mkpoli@mkpo.li" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"vocaloid-database-dump" = "vocaloid_database_dump:main"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
